Added calculate only shield advantage
